--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,7 @@
 
     <div class="nav-right">
         <a href="{% url 'post_new' %}">New Blog Post</a>
+        <a href="{% url 'register' %}">Register</a>
     </div>
     
 </header>
