--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -7,4 +7,7 @@
         {{ form.as_p }}
     <button type="submit">Log In</button>
     </form>
+
+    <p>Forgot your password?</p>
+    <a href="{% url 'password_reset' %}">Reset Password</a>
 {% endblock content %}
