--- a/templates/home.html
+++ b/templates/home.html
@@ -14,7 +14,9 @@
 	<div class="post-entry">
 		<h2><a href="{% url 'post_detail' post.pk %}">{{ post.title }}</a></h2>
 		<p>{{ post.body }}</p>
+		<a href="{% url 'post_detail' post.pk %}">Comments: {{ post.comments.count }}</a>
 	</div>
 	{% endfor %}
 
+	
 {% endblock %}
