--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -8,4 +8,17 @@
 
     <a href="{% url 'post_edit' post.pk %}">+ Edit Blog Post</a>
     <a href="{% url 'post_delete' post.pk %}">+ Delete Blog Post</a>
+
+    <a href="{% url 'post_comment' post.pk %}">Add comment</a>
+    
+    <h4>Comments</h4>
+    {% for comment in post.comments.all %}
+		<p>By --> {{ comment.author }}</p>
+		<p>{{ comment.body }}</p>
+
+    {% empty %}
+        <p>No comments here yet!</p>
+
+    {% endfor %}
+
 {% endblock %}
