--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -6,9 +6,8 @@
         <p>{{ post.body }}</p>
     </div>
 
-    <a href="{% url 'post_edit' post.pk %}">+ Edit Blog Post</a>
-    <a href="{% url 'post_delete' post.pk %}">+ Delete Blog Post</a>
-
+    <a href="{% url 'post_edit' post.pk %}">Edit Blog Post</a> | 
+    <a href="{% url 'post_delete' post.pk %}">Delete Blog Post</a> | 
     <a href="{% url 'post_comment' post.pk %}">Add comment</a>
     
     <h4>Comments</h4>
